--- a/CSS/location.css
+++ b/CSS/location.css
@@ -401,8 +401,6 @@ footer a {
         grid-column: 2/4;
         grid-row: 2/3;
     }
-
-
 }
 
 
@@ -436,63 +434,97 @@ main h1 {
     color:#2F5A28;
     font-weight: bold;    
     font-size: clamp(36px, 1.2rem, 72px);
-    margin: 60px 0;
+    margin: 60px;
+}
+.location p{
+    text-align: left;
+    padding: 15px 40px;
+    margin: 20px 20px;
+    line-height: 1rem;
+    font-size: clamp(12px, 0.8rem, 24px); 
 }
 
-#presentation{
-    display: none;
+.wifi img{
+    height: clamp(20px, 0.8rem, 50px);
 }
-
-.categorie {
-    display: flex;
-    justify-content: center;
-    position: relative;
-    font-size: clamp(24px, 0.8rem, 42px);
-    padding-bottom: 80px;
-}
-
-.offre {
-    position: absolute;
-    padding : 20px 0;
+.grid2 img{
+    max-width: 100%;
     width: 100%;
+    height: 100%;/*étire les images dans le div*/
+    object-fit: cover;/*se comporte comme une image de fond, les images remplissent bien les lignes*/
+}
+.grid2{
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-auto-rows:40vw ;
+    grid-gap:0.2rem;
+    padding: 1rem;
+
+}
+.item{
+    transition: transform all 1s ease;
+}
+.item:hover{
+    transform: scale(1.02);
+}
+.item-1, .item-7{
+    grid-column: 1/ -1; /*span 12; 1/-1prend toutes les colonnes*/
+}
+.item-2, .item-3, .item-4, .item-5, .item-6{
+    grid-column: span 6;
+}
+.item-5{
+    grid-row: 4/ 5;
+}
+.item-6{
+    grid-row: 3/ 5;
+}
+.item-7 img{
+    object-position: 50% 60%;/*permet de recentrer l'image*/
 }
 
-.offre figure {
-    display: flex;
-    align-items: center;
-    margin: 0;
-    flex-direction: column-reverse;
-}
+@media screen and (min-width: 900px) {
+    main h1 {
+        color:#2F5A28;
+        font-weight: bold;    
+        font-size: clamp(32px, 1rem, 50px);
+        margin: 80px;
+    }
+    .location p{
+        text-align: left;
+        padding: 15px 40px;
+        margin: 20px 60px;
+        background-color: azure;
+        line-height: 0.6rem;
+    }
 
-.offre figcaption{
-    margin : 0 10%;
+    .grid2 {
+        max-width: 80%;
+        margin: 0 auto;
+        grid-auto-rows: 25vw;
+    }
+    .item-1{
+        grid-column: 1/ 9;
+        grid-row: span 2;
+       
+    }
+    .item-2, .item-3 {
+        grid-column: 9/ 13;
+    }
+    .item-4, .item-5{
+        grid-column: span 8;
+    }
+    .item-6{
+        grid-column: 9/ 13;
+    }
+    .item-7{
+        grid-row: span 2;
+    }
 }
-
-.offre figcaption a{
-    display: none;
-}
-
-.offre a{
-    text-decoration: none;
-    color: black;
-    padding : 10px 30px;
-    background-color: gray;
-}
-
-.offre img {
-    width: 80%;
-    margin : 20px 0;
-}
-
-.img_factice {
-    position: relative;
-    visibility: hidden;
-}
-
 @media screen and (min-width:1024px){
 
     main{
-        display: grid;
+        display: f;
         grid-template-columns: 1fr 2fr;
         align-items: center;
     }
@@ -500,38 +532,45 @@ main h1 {
     main h1{
         place-self: end;
         background-color: #b6d5d9;
-        padding : 10px 30px;
+        padding : 10px 20px;
         font-size: clamp(18px, 0.6rem, 36px);
-        margin : 120px 0 80px;
+        margin : 50px 50px 30px;
     }
-    #presentation{
-        grid-column: 1/3;
-        display: block;
-        width: 100%;
-        margin-bottom: 80px;
-    }
-    #sejour{
-        grid-column-start: 2;
-        grid-row: 3/6;
-    }
-    .categorie{
-        font-size: clamp(16px, 0.3rem, 28px);
+    .location p{
+        text-align: left;
+        padding: 15px 50px;
+        margin: 20px 80px;
+        background-color: azure;
+        line-height: 0.7rem;
     }
 
-    .offre figure > a{
-        display: none;
+    .grid2 {
+        max-width: 80%;
+        grid-auto-rows: 10vw;
     }
-
-    .offre figcaption{
-        display: flex;
-        flex-wrap: nowrap;
-        justify-content: space-around;
-        align-items: center;
-        width: 80%;
+    .item-1{
+        grid-column: 1/ 7;
+        grid-row: 1/ 3
     }
+    .item-2, .item-3{
+        grid-column: span 3;
+        grid-row: span 2;
+    }
+    .item-4, .item-5{
+        grid-column: span 3;
+    }
+    .item-6{
+        grid-column: 4/ 7;
+        grid-row: span 2;  
+    }
+    .item-7{
+        grid-column: span 6;
+        grid-row: span 2;
 
-    .offre figcaption a{
-        display: block;
-        margin : 0 10px;
     }
 }
+
+
+
+   
+
