--- a/CSS/categorie.css
+++ b/CSS/categorie.css
@@ -139,7 +139,7 @@ nav div > ul > li:last-child {
     top: 100%;
     left: 0;
     background-color: black;
-    opacity: 0.5;
+    opacity: 0.;
     height: 100vh;
     width: 100%;
 }footer {
