--- a/CSS/location.css
+++ b/CSS/location.css
@@ -139,7 +139,7 @@ nav div > ul > li:last-child {
     top: 100%;
     left: 0;
     background-color: black;
-    opacity: 0.5;
+    opacity: 0.;
     height: 100vh;
     width: 100%;
 }footer {
@@ -401,6 +401,8 @@ footer a {
         grid-column: 2/4;
         grid-row: 2/3;
     }
+
+
 }
 
 
@@ -420,7 +422,6 @@ body {
 }
 
 /* reset de page et debut de responsive au dessus */
-
 
 main {
     display: flex;
