--- a/CSS/croisiere.css
+++ b/CSS/croisiere.css
@@ -140,7 +140,7 @@ nav div > ul > li:last-child {
     top: 100%;
     left: 0;
     background-color: black;
-    opacity: 0.;
+    opacity: 0.3;
     height: 100vh;
     width: 100%;
 }footer {
