--- a/CSS/camping alaska.css
+++ b/CSS/camping alaska.css
@@ -454,6 +454,7 @@ main>p:first-of-type{
 #presentation{
     padding : clamp(10px, 5%, 50px) clamp(10px, 10%, 100px);
     background-color: lightcyan;
+    margin-bottom: 50px;
 }
 
 .detail div > p{
@@ -467,6 +468,7 @@ main>p:first-of-type{
     display: flex;
     flex-direction: column;
     align-items: baseline;
+    margin-bottom: 50px;
 }
 
 .petit_image{
@@ -487,10 +489,10 @@ main>p:first-of-type{
 }
 
 #info_complementaire{
-    display : grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-column-gap: 40px;
+    display : flex;
+    flex-direction: column;
     text-align: start;
+    margin : 0 10% 50px;
 }
 
 #info_complementaire p{
@@ -564,10 +566,5 @@ aside button a{
     main aside{
         grid-column-start: 2;
         grid-row: 5/7;
-    }
-    #info_complementaire{
-        grid-template-rows:repeat(8, 1fr);
-        grid-template-columns: auto;
-        grid-auto-flow: column;
     }
 }
