--- a/CSS/style.css
+++ b/CSS/style.css
@@ -465,9 +465,11 @@ main h1{
 }    
 #destination {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     position: relative;
     padding : 0 50px;
+    margin-bottom: 50px;
 }
 .photos_destination{
     position: absolute;
@@ -477,6 +479,7 @@ main h1{
     border: 1px solid black;
     border-radius: 15px;
     box-shadow: -5px 15px 15px 5px rgba(77, 172, 216, 0.2);
+    animation-duration: 6s;
 }
 .photos_destination figure{
    display:flex;
@@ -521,22 +524,7 @@ main h1{
     position: relative;
 }
 
-/*caroussel*/
-.photos_destination:nth-child(1){
-    animation : defilement 30s linear 0s infinite forwards;
-  }
-.photos_destination:nth-child(2){
-    animation : defilement 30s linear 6s infinite forwards;
-  }
-.photos_destination:nth-child(3){
-    animation : defilement 30s linear 12s infinite forwards;
-  }
-.photos_destination:nth-child(4){
-    animation : defilement 30s linear 18s infinite forwards;
-  }
-.photos_destination:nth-child(5){
-    animation : defilement 30s linear 24s infinite forwards;
-  }
+
   @keyframes defilement {
     from{
         visibility: visible;
@@ -544,30 +532,27 @@ main h1{
         opacity: 0%;
     }
 
-    2%{
+    15%{
         visibility: visible;
         transform: translate(0);
         opacity: 100%;
     }
 
-    17%{
+    84%{
         visibility: visible;
         transform: translate(0);
         opacity:100%;
     }
 
-    19%{
+    98%{
         visibility: visible;
         transform: translateX(-50%);        
         opacity: 0%;
     }
-    20%{
+    to{
         transform: translateX(-50%);
         visibility: hidden;
-    }
-    to{
-        transform: translateX(50%);  
-        visibility: hidden;
+        opacity: 0%;
     }
     }
     #nous_trouver{
